@@ -1,6 +1,7 @@
 2007-08-25  Badlop  <badlop@ono.com>
 
-	* src/mod_presence.erl: Fixed compilation warnings.
+	* src/mod_presence.erl: Fixed compilation warnings. Fixed two warnings reported by Dialyzer.
+	
 
 2007-08-05  Badlop  <badlop@ono.com>
 
